fix: layout issue for onboarding main section

--- a/src/components/pages/Home/Onboarding/Header.module.css
+++ b/src/components/pages/Home/Onboarding/Header.module.css
@@ -3,7 +3,6 @@
   justify-content: flex-start;
   align-items: center;
   height: var(--wrapper-height);
-  margin-bottom: var(--spacer);
   padding-left: 0;
 }
 
