--- a/src/components/pages/Home/Onboarding/Main.module.css
+++ b/src/components/pages/Home/Onboarding/Main.module.css
@@ -8,10 +8,6 @@
   margin-bottom: 0;
 }
 
-.finalStep .cardContainer {
-  display: none;
-}
-
 .suggestion {
   display: none;
 }
